   specification.

 - The compiler is now shipped as a single FASL file, cmp.fas, without
   extra files such as sysfun.lsp

 - DECLAIM proclamation and toplevel DEFMACRO definitions do not propagate
   beyond the compiled file.

 - AREF/ASET can now be open-coded by the C compiler.

 - Compilation policies (including optimization and safety checks) are now
   defined as flags that are activated and deactivated by certain optimization
   levels. In order for the flag to be active, all conditions have to be
   matched. For instance
      (define-policy inline-slot-access :on speed 1 :off debug 2 :off safety 2
        "Inline access to structures and sealed classes")
   slot inlining would be activated by a SPEED of 1, but only if DEBUG and
   SAFETY are below 2.

 - Important performance improvements in sequence functions, such as FIND,
   SEARCH, REPLACE, POSITION, COUNT, REMOVE, DELETE, SUBSTITUTE, NSUBSTITUTE,
   DELETE-DUPLICATES, REMOVE-DUPLICATES and their possible IF/IF-NOT
   variants. Except COUNT, for efficiency, some of the previously mentioned
   functions may run through the sequences in arbitrary orders one or more
   times.

 - LOOP is now capable of declaring an iteration variable to have a
   more precise type (fixnum, single-float, etc), when the iteration limits
   are known, as in (LOOP FOR I FROM 0 TO 1000 ....)

 - ASSERT is now "cheaper", delegating the job on an auxiliary function and
   not creating any nonlocal jump structures (TAGBODY, etc).

 - ECL's dynamic foreign function interface, that is the FFI that works for
   interpreted and evaluated code and that does not need a C compiler, now
   depends on libffi -- without it, it will refuse to build.

 - ECL exports a new feature, :C++, when it is built with a C++ compiler.

 - Function proclamations and declarations are also used to deduce the type
   of their arguments.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***